<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/chart_activity"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="32dp"
    tools:context="com.example.zozo07.mobile.ChartActivity">

    <com.github.mikephil.charting.charts.BarChart
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/bargraph">
    </com.github.mikephil.charting.charts.BarChart>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_marginStart="48dp"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/bargraph"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/weekDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weekdays" />

        <RadioButton
            android:id="@+id/saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saturday" />

        <RadioButton
            android:id="@+id/sunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunday" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvSleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TextView"
        android:layout_below="@+id/tvAlarm"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="17dp" />

    <TextView
        android:id="@+id/tvAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TextView"
        android:layout_alignTop="@+id/radioGroup"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="9dp" />

    <TextView
        android:id="@+id/tvVacation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TextView"
        android:layout_alignBottom="@+id/radioGroup"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvAlarm"
        android:layout_alignBottom="@+id/tvAlarm"
        android:layout_marginEnd="13dp"
        android:layout_toStartOf="@+id/tvAlarm"
        android:text="Alarm" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvSleep"
        android:layout_alignBottom="@+id/tvSleep"
        android:layout_alignStart="@+id/textView4"
        android:text="Sleep" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvVacation"
        android:layout_alignBottom="@+id/tvVacation"
        android:layout_alignEnd="@+id/textView4"
        android:text="Vacation" />


</RelativeLayout>