<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:adnroid="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@+id/flContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="137dp"
                    android:layout_marginTop="100dp"
                    android:textSize="30sp"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="137dp"
                    android:layout_marginTop="195dp"
                    android:gravity="start"
                    android:textSize="30sp" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_below="@+id/tvDate"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="23dp">

                    <Button
                        android:id="@+id/btnSetDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        adnroid:layout_centerInParent ="true"
                        android:background="@drawable/set_date"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1" />
                </LinearLayout>

            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nvView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_view" />
</android.support.v4.widget.DrawerLayout>